<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">评分系统</string>
    <string name="action_settings">Settings</string>
    <string name="units_name">参赛队伍:</string>
    <string name="chief_view_title">参赛队伍</string>
    <string name="category_name">比赛名称:</string>
    <string name="art_score">得分:</string>
    <string name="button">发送</string>
    
    <string name="about">中国啦啦操竞赛评分系统</string>
    <string name="lala_score">啦啦操</string>
    <string name="lala_star">啦啦之星</string>
    
    <string name="role_hint">请选择角色</string>
    <string name="login">登陆</string>
    <string name="role">身份:</string>
    <string name="state">状态:</string>
    
    <string name="game_mode">赛事模式:</string>
    <string name="score1">裁判一:</string>
    <string name="score2">裁判二:</string>
    <string name="score3">裁判三:</string>
    <string name="score4">裁判四:</string>
    <string name="score5">裁判五:</string>
    <string name="score6">裁判六:</string>
    <string name="score7">裁判七:</string>
    <string name="score8">裁判八:</string>
    <string name="score9">裁判九:</string>
    <string name="score10">裁判十:</string>
    <string name="send">发送:</string>
    <string name="judge_subscore">裁判长减分:</string>
    <string name="tscore">最后得分:</string>
    <string name="rank">排名</string>
    
    <string name="digits">0123456789.</string>

</resources>
